--- a/configs/light.yaml
+++ b/configs/light.yaml
@@ -12,7 +12,8 @@ lora:
 training:
   per_device_train_batch_size: 1
   gradient_accumulation_steps: 5
-  optim: paged_adamw_32bit
+  # optim: paged_adamw_32bit
+  optim: paged_lion_32bit
   save_steps: 50
   # logging_steps: 10
   logging_steps: 1
